--- a/public/index.html
+++ b/public/index.html
@@ -41,25 +41,43 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
- <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
   <!-- Добавьте этот скрипт -->
   <script>
-     // Проверяем наличие файла манифеста
-        // Проверяем наличие сервисного работника
-        if ('serviceWorker' in navigator && navigator.serviceWorker.controller) {
-            window.location.replace('/pwa.html');
-        } else {
-            console.log('PWA is not installed.');
-        }
+    let deferredPrompt;
 
+    let redurect_url = '/pwa.html'
+
+    window.addEventListener('load', checkPWAInstallation);
 
     window.addEventListener('appinstalled', () => {
-      // После успешной установки PWA перенаправляем пользователя на pwa.html
-      window.location.replace('/pwa.html');
+      console.log('PWA installed');
+      // Установить флаг в localStorage, чтобы знать, что PWA установлена
+      localStorage.setItem('isPWAInstalled', 'true');
+      window.location.href = redurect_url;
     });
+
+    window.addEventListener('beforeinstallprompt', (event) => {
+      console.log('PWA not installed');
+      // Предотвратить автоматическое показ штатного диалога установки
+      event.preventDefault();
+      // Сохранить ссылку на prompt-событие для последующего использования
+      deferredPrompt = event;
+      // Удалить флаг из localStorage, чтобы знать, что PWA не установлена
+      localStorage.removeItem('isPWAInstalled');
+    });
+
+    function checkPWAInstallation() {
+      // Проверить, установлена ли PWA, используя флаг из localStorage
+      const isPWAInstalled = localStorage.getItem('isPWAInstalled') === 'true';
+
+      if (isPWAInstalled) {
+        // PWA установлена, перенаправляем на стартовый URL PWA
+        window.location.href = redurect_url;
+      }
+    }
   </script>
   </body>
 </html>
